# Basics_in_C

./: CMakeLists.txt
advanced/: binaryrep.c  bubblesort.c  containsnumber.c  frequency.c  palindrom.c  pascalstriangle.c  stars.c  vowels.c  wordcounter.c
basics/: bytesofdatatypes.c  equalsarray.c  greatescommondivisor.c  leapyear.c  maxmin.c  perfectnumber.c  square.c  stringreverse.c  stringtouppercase.c  sumandproduct.c
linkedlists/: example.c  examplefromslides.c
linkedlists/examexercises/: listwithpointers.c  llmanipulation.c  students.c
linkedlists/linkedlistsexerciseswithfuntions/: dene.c  linkedList.c  random.c  test.c  yeterartik.c
pointers/: copy.c  exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  exercise6.c  exercise7.c  exercise8.c  foo.c  structs.c
