cmake_minimum_required(VERSION 3.29)
project(MultiMainProject)

set(CMAKE_C_STANDARD 17)


add_executable(sumandproduct basics/sumandproduct.c)
add_executable(s2u basics/stringtouppercase.c)
add_executable(maxmin basics/maxmin.c)

add_executable(stringreverse basics/stringreverse.c)
add_executable(perfectnumber basics/perfectnumber.c)
add_executable(equalsarray basics/equalsarray.c)
add_executable(greatestcommondivisor basics/greatescommondivisor.c)
add_executable(leapyear basics/leapyear.c)
add_executable(bytesofdatatypes basics/bytesofdatatypes.c)
add_executable(square basics/square.c)
add_executable(copy pointers/copy.c)
add_executable(foo pointers/foo.c)
add_executable(structs pointers/structs.c)
add_executable(exercise1 pointers/exercise1.c)
add_executable(exercise2 pointers/exercise2.c)
add_executable(exercise3 pointers/exercise3.c)
add_executable(exercise4 pointers/exercise4.c)
add_executable(exercise.5 pointers/exercise5.c)
add_executable(exercise6 pointers/exercise6.c)
add_executable(exercise7 pointers/exercise7.c)
add_executable(exercise8 pointers/exercise8.c)
add_executable(example linkedlists/example.c)
add_executable(examplefromslides linkedlists/examplefromslides.c)
add_executable(test linkedlists/linkedlistsexerciseswithfuntions/test.c)
add_executable(dene linkedlists/linkedlistsexerciseswithfuntions/dene.c)

add_executable(linkedList linkedlists/linkedlistsexerciseswithfuntions/linkedList.c)
add_executable(yeterartik linkedlists/linkedlistsexerciseswithfuntions/yeterartik.c)
add_executable(listwithpointers linkedlists/examexercises/listwithpointers.c
)
add_executable(llmanipulation linkedlists/examexercises/llmanipulation.c)
add_executable(frequency advanced/frequency.c)
add_executable(wordcounter advanced/wordcounter.c)
add_executable(bubblesort advanced/bubblesort.c)
add_executable(palindrom advanced/palindrom.c)
add_executable(binaryrep advanced/binaryrep.c)
add_executable(containsnumber advanced/containsnumber.c)
add_executable(vowels advanced/vowels.c)
add_executable(stars advanced/stars.c)
add_executable(students linkedlists/examexercises/students.c)
